--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ asgiref==3.4.1
 Django==3.2.5
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.4.0
-pkg-resources==0.0.0
+psycopg2==2.9.1
+psycopg2-binary==2.9.1
 PyJWT==1.7.1
 pytz==2021.1
 six==1.16.0
